--- a/index.html
+++ b/index.html
@@ -1,115 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hey! Welcome to my Portfolio</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    <header style="background-color: peach; text-align: center; padding: 20px;">
-        <nav>
-            <ul style="list-style: none; padding: 0; display: flex; justify-content: center; gap: 20px;">
-                <li><a href="#about">About</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#work-experience">Work Experience</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
+   <head>
+      <title>My Portfolio</title>
+      <link rel="stylesheet" href="style.css">
+   </head>
+   <body>
+      <div class="main">
+         <div class="navbar">
+            <img src="" class="logo">
+            <ul>
+              <li><a href="#about">ABOUT</a></li>
+              <li><a href="#skills">SKILLS</a></li>
+              <li><a href="#work-experience">WORK EXPERIENCE</a></li>
+              <li><a href="#projects">MY PROJECTS</a></li>
+              <li><a href="#contact">CONTACT</a></li>
             </ul>
-        </nav>
-        <div class="hero">
-            <img src="./img/MicrosoftTeams-image-zintle.png" alt="Zintle Dyesi Profile" class="profile-img" style="border-radius: 50%; width: 150px; height: 150px; object-fit: cover; margin: 20px 0;">
-            <h1>Zintle Dyesi</h1>
-            <p>Software Developer | Web Enthusiast | Tech Explorer</p>
-        </div>
-    </header>
+         </div>
+         <div class="info">
+            <h3>Hi, I'm <span>Zintle</span></h3>
+            <h1><span>W</span>eb <span>D</span>esigner|<span>S</span>oftware <span>D</span>eveloper|<span>T</span>ech <span>E</span>xplorer</h1>
+            <h3>A web and software developer from Port Elizabeth, Eastern Cape.<br>I create websites and develop applications using programming languages.</h3>
+            <a href="#contact">Hire Me</a>
+         </div>
+         <div class="image">
+            <img src="" class="girl" alt="Portfolio Image">
+         </div>
+         <div class="icons">
+            <a href="https://www.linkedin.com/in/zintle-dyesi-189544336"><ion-icon name="logo-linkedin"></ion-icon></a>
+         </div>
 
-    <section id="about" class="block" style="background-color: peach; padding: 20px;">
-        <h2>About Me</h2>
-        <p>
-            I am a highly motivated software developer currently pursuing the Systems Software Developer learnership at CAPACITI. 
-            I have an equitable foundation in web development and programming, with hands-on experience in both a software project 
-            and a web application project. My technical skills include JavaScript, Python, HTML, CSS, and the Django web framework.
-        </p>
-        <p>
-            Currently, I am studying and exploring Machine Learning to further expand my skill set. I am passionate about continuous 
-            learning and applying my knowledge to real-world projects, particularly in creating intuitive and user-friendly applications. 
-            Additionally, I have experience in educational technology, having worked as an Edutech coach, where I developed skills in 
-            both tech and teaching.
-        </p>
-    </section>
+         <!-- About Section -->
+         <section id="about" class="block" style="background-color: peach; padding: 20px;">
+            <h2>About Me</h2>
+            <p>
+               I am a highly motivated software developer currently pursuing the Systems Software Developer learnership at CAPACITI. 
+               I have an equitable foundation in web development and programming, with hands-on experience in both a software project 
+               and a web application project. My technical skills include JavaScript, Python, HTML, CSS, and the Django web framework.
+            </p>
+            <p>
+               Currently, I am studying and exploring Machine Learning to further expand my skill set. I am passionate about continuous 
+               learning and applying my knowledge to real-world projects, particularly in creating intuitive and user-friendly applications. 
+               Additionally, I have experience in educational technology, having worked as an Edutech coach, where I developed skills in 
+               both tech and teaching.
+            </p>
+         </section>
 
-    <section id="skills" class="block" style="background-color: peach; padding: 20px;">
-        <h2>Skills</h2>
-        <div class="skills-grid" style="display: flex; gap: 20px; flex-wrap: wrap; justify-content: center;">
-            <div class="skill-card" style="padding: 10px; background: gray; border-radius: 5px; min-width: 120px; text-align: center;">HTML</div>
-            <div class="skill-card" style="padding: 10px; background: gray; border-radius: 5px; min-width: 120px; text-align: center;">CSS</div>
-            <div class="skill-card" style="padding: 10px; background: gray; border-radius: 5px; min-width: 120px; text-align: center;">JavaScript</div>
-            <div class="skill-card" style="padding: 10px; background: gray; border-radius: 5px; min-width: 120px; text-align: center;">Python</div>
-            <div class="skill-card" style="padding: 10px; background: gray; border-radius: 5px; min-width: 120px; text-align: center;">Django</div>
-            <div class="skill-card" style="padding: 10px; background: gray; border-radius: 5px; min-width: 120px; text-align: center;">Java</div>
-        </div>
-    </section>
-    
-
-    <section id="work-experience" class="block" style="background-color: peach; padding: 20px;">
-        <h2>Work Experience</h2>
-        <div class="work-experience">
-            <div class="experience-item">
-                <h3>Software Developer</h3>
-                <p><strong>2024-Present</strong></p>
-                <p>CAPACITI Systems Software Developer Learnership</p>
-                <p>Working on various projects as part of the learnership, gaining hands-on experience in web and software development using languages like JavaScript, Python, HTML, CSS, and the Django web framework.</p>
+         <!-- Skills Section -->
+         <section id="skills" class="block" style="background-color: peach; padding: 20px;">
+            <h2>Skills</h2>
+            <div class="skills-grid" style="display: flex; gap: 20px; flex-wrap: wrap; justify-content: center;">
+               <div class="skill-card">HTML</div>
+               <div class="skill-card">CSS</div>
+               <div class="skill-card">JavaScript</div>
+               <div class="skill-card">Python</div>
+               <div class="skill-card">Django</div>
+               <div class="skill-card">Java</div>
             </div>
-            <div class="experience-item">
-                <h3>Edutech Coach</h3>
-                <p><strong>February 2024 - 30 July 2024</strong></p>
-                <p>Masinyusane Development Organisation</p>
-                <p>Delivered technology-based education solutions, helping students and educators incorporate digital tools into their learning processes.</p>
-            </div>
-        </div>
-    </section>
+         </section>
 
-    <section id="projects" class="block" style="background-color: peach; padding: 20px;">
-        <h2>Projects</h2>
-        <div class="projects-grid" style="display: flex; gap: 20px; flex-wrap: wrap;">
-            <div class="project-card" style="background: gray; padding: 20px; border-radius: 5px; text-align: center;">
-                <h3>Fitness Tracker App</h3>
-                <a href="https://github.com/Zintle19/Titans-Fitness-Application.git" class="project-link" target="_blank">
-                    <img src="" alt="Fitness Tracker App" style="width: 100%; height: auto; border-radius: 5px;">
-                </a>
-                <p>A desktop app that allows users to track their fitness goals with custom interfaces and workout inspiration.</p>
+         <!-- Work Experience Section -->
+         <section id="work-experience" class="block" style="background-color: peach; padding: 20px;">
+            <h2>Work Experience</h2>
+            <div class="work-experience">
+               <div class="experience-item">
+                  <h3>Software Developer</h3>
+                  <p><strong>2024-Present</strong></p>
+                  <p>CAPACITI Systems Software Developer Learnership</p>
+                  <p>Working on various projects as part of the learnership, gaining hands-on experience in web and software development using languages like JavaScript, Python, HTML, CSS, and the Django web framework.</p>
+               </div>
+               <div class="experience-item">
+                  <h3>Edutech Coach</h3>
+                  <p><strong>February 2024 - 30 July 2024</strong></p>
+                  <p>Masinyusane Development Organisation</p>
+                  <p>Delivered technology-based education solutions, helping students and educators incorporate digital tools into their learning processes.</p>
+               </div>
             </div>
-            <div class="project-card" style="background: gray; padding: 20px; border-radius: 5px; text-align: center;">
-                <h3>Fruit and Veggie Delight</h3>
-                <a href="https://github.com/Zintle19/Fruit-and-Veggie.git" class="project-link" target="_blank">
-                    <img src="" alt="Fruit and Veggie Delight Website" style="width: 100%; height: auto; border-radius: 5px;">
-                </a>
-                <p>A website showcasing nutritious and healthy products and recipes with a vibrant, user-friendly design.</p>
+         </section>
+
+         <!-- Projects Section -->
+         <section id="projects" class="block" style="background-color: peach; padding: 20px;">
+            <h2>Projects</h2>
+            <div class="projects-grid">
+               <div class="project-card">
+                  <h3>Fitness Tracker App</h3>
+                  <a href="https://github.com/Zintle19/Titans-Fitness-Application.git" class="project-link" target="_blank">
+                     <img src="" alt="Fitness Tracker App">
+                  </a>
+                  <p>A desktop app that allows users to track their fitness goals with custom interfaces and workout inspiration.</p>
+               </div>
+               <div class="project-card">
+                  <h3>Fruit and Veggie Delight</h3>
+                  <a href="https://github.com/Zintle19/Fruit-and-Veggie.git" class="project-link" target="_blank">
+                     <img src="" alt="Fruit and Veggie Delight Website">
+                  </a>
+                  <p>A website showcasing nutritious and healthy products and recipes with a vibrant, user-friendly design.</p>
+               </div>
             </div>
-        </div>
-    </section>
+         </section>
 
-    <section id="contact" class="block" style="background-color: peach; padding: 20px;">
-        <h2>Contact Me</h2>
-        <form style="display: flex; flex-direction: column; gap: 10px;">
-            <input type="text" name="name" placeholder="Your Name" required style="padding: 10px; border-radius: 5px;">
-            <input type="email" name="email" placeholder="Your Email" required style="padding: 10px; border-radius: 5px;">
-            <textarea name="message" placeholder="Your Message" required style="padding: 10px; border-radius: 5px;"></textarea>
-            <button type="submit" style="padding: 10px; background-color: white; border-radius: 5px;">Send Message</button>
-        </form>
-        <div class="social-links" style="margin-top: 20px; text-align: center;">
-            <a href="https://www.linkedin.com/in/zintle-dyesi-189544336/" target="_blank" style="margin-right: 20px;">
-                <img src="./img/letbelbl.png" alt="LinkedIn Icon" style="width: 40px; height: 40px;">
-            </a>
-            <a href="dyesizintle66@gmail.com">
-                <img src="./img/email_10270783.png" alt="Email Icon" style="width: 40px; height: 40px;">
-            </a>
-        </div>
-    </section>
+         <!-- Contact Section -->
+         <section id="contact" class="block" style="background-color: peach; padding: 20px;">
+            <h2>Contact Me</h2>
+            <form>
+               <input type="text" name="name" placeholder="Your Name" required>
+               <input type="email" name="email" placeholder="Your Email" required>
+               <textarea name="message" placeholder="Your Message" required></textarea>
+               <button type="submit">Send Message</button>
+            </form>
+            <div class="social-links">
+               <a href="https://www.linkedin.com/in/zintle-dyesi-189544336/" target="_blank">
+                  <img src="./imgs/LinkedIn icon.png" alt="LinkedIn Icon">
+               </a>
+               <a href="mailto:dyesizintle66@gmail.com">
+                  <img src="./imgs/email icon.png" alt="Email Icon">
+               </a>
+            </div>
+         </section>
 
-    <footer style="background-color: peach; text-align: center; padding: 10px;">
-        <p>© 2024 Zintle - The Tech Titan. All rights reserved.</p>
-    </footer>
-</body>
+         <!-- Footer -->
+         <footer>
+            <p>© 2024 Zintle - The Tech Titan. All rights reserved.</p>
+         </footer>
+      </div>
+      <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+   </body>
 </html>
